--- a/README.html
+++ b/README.html
@@ -184,6 +184,24 @@ outcome <span class="pl-k">=</span> queue.listTaskGroup(<span class="pl-s"><span
 in the sync client.  This feature allows passing a callback as the
 'paginationHandler' keyword-argument.  This function will be passed the
 response body of the API method as its sole positional arugment.</p>
+<p>This example of the built in pagination shows how a list of tasks could be
+built and then counted:</p>
+<div class="highlight highlight-source-python"><pre><span class="pl-k">import</span> taskcluster
+queue <span class="pl-k">=</span> taskcluster.Queue()
+
+responses <span class="pl-k">=</span> []
+
+<span class="pl-k">def</span> <span class="pl-en">handle_page</span>(<span class="pl-smi">y</span>):
+    <span class="pl-c1">print</span>(<span class="pl-s"><span class="pl-pds">"</span><span class="pl-c1">%d</span> tasks fetched<span class="pl-pds">"</span></span> <span class="pl-k">%</span> <span class="pl-c1">len</span>(y.get(<span class="pl-s"><span class="pl-pds">'</span>tasks<span class="pl-pds">'</span></span>, [])))
+    responses.append(y)
+
+queue.listTaskGroup(<span class="pl-s"><span class="pl-pds">'</span>JzTGxwxhQ76_Tt1dxkaG5g<span class="pl-pds">'</span></span>, <span class="pl-v">paginationHandler</span><span class="pl-k">=</span>handle_page)
+
+tasks <span class="pl-k">=</span> <span class="pl-c1">0</span>
+<span class="pl-k">for</span> response <span class="pl-k">in</span> responses:
+    tasks <span class="pl-k">+=</span> <span class="pl-c1">len</span>(response.get(<span class="pl-s"><span class="pl-pds">'</span>tasks<span class="pl-pds">'</span></span>, []))
+
+<span class="pl-c1">print</span>(<span class="pl-s"><span class="pl-pds">"</span><span class="pl-c1">%d</span> requests fetch <span class="pl-c1">%d</span> tasks<span class="pl-pds">"</span></span> <span class="pl-k">%</span> (<span class="pl-c1">len</span>(responses), tasks))</pre></div>
 <h2>
 <a id="user-content-logging" class="anchor" href="#logging" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Logging</h2>
 <p>Logging is set up in <code>taskcluster/__init__.py</code>.  If the special
